# kweaver-dip

./: .gitignore  README.md  README.zh.md
deploy/: README.md  README.zh.md  agent.json  deploy.sh
docs/: PROJECT_STRUCTURE.md
dsg/: go.work.sum
hub/backend/: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
hub/backend/dip-hub-chart/: Chart.yaml  _componentMeta.json  values.yaml
hub/backend/dip-hub-chart/templates/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
hub/backend/scripts/: README.md  init_db.py  run_dev.py
hub/backend/src/: __init__.py  main.py
hub/backend/src/adapters/: __init__.py  application_adapter.py  deploy_manager_adapter.py  external_service_adapter.py  health_adapter.py  hydra_adapter.py  mock_application_adapter.py  mock_external_service_adapter.py  oauth2_adapter.py  session_adapter.py  user_management_adapter.py
hub/backend/src/application/: __init__.py  application_service.py  health_service.py  login_service.py  logout_service.py  refresh_token_service.py  user_info_service.py
hub/backend/src/common/: units.py
hub/backend/src/domains/: __init__.py  application.py  health.py  login.py  session.py
hub/backend/src/infrastructure/: __init__.py  container.py  exceptions.py  oauth_register.py
hub/backend/src/infrastructure/config/: settings.py
hub/backend/src/infrastructure/context/: __init__.py  token_context.py
hub/backend/src/infrastructure/database/: __init__.py  init.py
hub/backend/src/infrastructure/logging/: logger.py
hub/backend/src/infrastructure/middleware/: __init__.py  auth_middleware.py
hub/backend/src/ports/: __init__.py  application_port.py  deploy_manager_port.py  external_service_port.py  health_port.py  hydra_port.py  oauth2_port.py  session_port.py  user_management_port.py
hub/backend/src/routers/: __init__.py  application_router.py  health_router.py  login_router.py  logout_router.py  refresh_token_router.py  userinfo_router.py
hub/backend/src/routers/schemas/: __init__.py  application.py  login.py
hub/backend/tests/: __init__.py  test_application.py  test_health.py
hub/dev/mock/: .gitignore  README.md  app.py  pyproject.toml  run.sh
hub/dev/mock/src/: __init__.py  config.py  handlers.py  routes.py  storage.py
hub/dev/mock/tests/: conftest.py  test_api.py  test_handlers.py  test_storage.py
(+2448 files in other folders)
